--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,21 @@
 version: '3.17'
 
 networks:
-  e_learning_network:
+  stationery_network:
     driver: bridge
 
 services:
-  e-learning-app:
-    container_name: e-learning-app
+  stationery-app:
+    container_name: stationery-app
     image: ${IMAGE_NAME}
     ports:
-      - '80:80'
-#      - '443:443'
+      - '88:88'
     build:
       context: .
       dockerfile: Dockerfile
-#    command: uvicorn src.main:app --host 0.0.0.0 --port 80 --reload --workers 4
-    command: uvicorn app.main:app --proxy-headers --host 0.0.0.0 --port 80 --reload
+    command: uvicorn app.main:app --proxy-headers --host 0.0.0.0 --port 88 --reload
     networks:
-      - e_learning_network
+      - stationery_network
     volumes:
       - .:/usr/src/app
     env_file:
@@ -37,16 +35,16 @@ services:
     env_file:
       - .env
     ports:
-      - "5432:5432"
+      - "5454:5432"
     networks:
-      - e_learning_network
+      - stationery_network
 
   migration:
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres?sslmode=disable
     image: ${IMAGE_NAME}:latest
     networks:
-      - e_learning_network
+      - stationery_network
     entrypoint: /bin/sh -c "dbmate wait && dbmate up"
     depends_on:
       - db
